# libsagui

./: .dockerignore  .gitignore  .markdownlint.json  .travis.yml  ABIComplianceChecker.md  BUILD.md  CMakeLists.txt  ChangeLog  DONORS  Dockerfile  INSTALL.md  PVS_STUDIO.md  README.md  SECURITY.md  THANKS
.github/: ISSUE_TEMPLATE
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  project_using_sagui.md  question.md
.github/workflows/: CI.yml
cmake/: CMakeUninstall.cmake.in  PVS-Studio.cmake  SgABIComplianceChecker.cmake  SgCPack.cmake  SgCompatibilityChecker.cmake  SgDoxygen.cmake  SgFFI.cmake  SgFlags.cmake  SgGNUSource.cmake  SgMHD.cmake  SgPC.cmake  SgPCRE2.cmake  SgPVSStudio.cmake  SgRC.cmake  SgSummary.cmake  SgUninstall.cmake  SgVersion.cmake  SgZLib.cmake  Toolchain-mingw32-Linux.cmake  Toolchain-mingw32-openSUSE.cmake  libsagui.pc.cmake.in  libsagui.rc.cmake.in
docs/: ABIComplianceChecker.md  BUILD.md  INSTALL.md  PVS_STUDIO.md  SECURITY.md  annotated.html  classes.html  dir_4e8d938e9ddb5a617c200d5739d1f41a.html  dir_d44c64559bbebec7f509842c48db8b23.html  example__httpauth_8h.html  example__httpauth_8h_source.html  example__httpcookie_8h.html  example__httpcookie_8h_source.html  example__httpsrv_8h.html  example__httpsrv_8h_source.html  example__httpsrv__tls_8h.html  example__httpsrv__tls_8h_source.html  example__httpsrv__tls__cert__auth_8h.html  example__httpsrv__tls__cert__auth_8h_source.html  example__httpuplds_8h.html  example__httpuplds_8h_source.html  example__str_8h.html  example__str_8h_source.html  example__strmap_8h.html  example__strmap_8h_source.html  example_httpauth_8c-example.html  example_httpcookie_8c-example.html  example_httpsrv_8c-example.html  example_httpsrv_tls_cert_auth_8c-example.html  example_httpuplds_8c-example.html  example_str_8c-example.html  example_strmap_8c-example.html  examples.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  group__sg__api.html  group__sg__httpsrv.html  (+15 more)
docs/search/: all_0.js  all_1.js  all_3.js  classes_0.js  files_1.js  functions_0.js  groups_1.js  groups_2.js  groups_3.js  searchdata.js  typedefs_0.js
doxygen/: Doxyfile.in  example_entrypoint.h  example_expr_basic.h  example_expr_full.h  example_httpauth.h  example_httpcomp.h  example_httpcookie.h  example_httpreq_form.h  example_httpreq_isolate.h  example_httpreq_payload.h  example_httpsrv.h  example_httpsrv_benchmark.h  example_httpsrv_sse.h  example_httpsrv_tls.h  example_httpsrv_tls_cert_auth.h  example_httpuplds.h  example_router_segments.h  example_router_simple.h  example_router_srv.h  example_router_vars.h  example_str.h  example_strmap.h  sagui.css
examples/: CMakeLists.txt  example_entrypoint.c  example_expr_basic.c  example_expr_full.c  example_ffi.c  example_httpauth.c  example_httpcomp.c  example_httpcookie.c  example_httpreq_form.c  example_httpreq_isolate.c  example_httpreq_payload.c  example_httpsrv.c  example_httpsrv_benchmark.c  example_httpsrv_benchmark.md  example_httpsrv_sse.c  example_httpsrv_tls.c  example_httpsrv_tls_cert_auth.c  example_httpuplds.c  example_router_segments.c  example_router_simple.c  example_router_srv.c  example_router_vars.c  example_str.c  example_strmap.c
examples/benchmark/: README.md  jmeter.jmx  sagui_aggregate.csv
examples/benchmark_jmeter/: aggregate_nginx.csv  nodejs_aggregate.csv
examples/certs/: ca.pem  client.p12  server.key  server.pem
include/: sagui.h
src/: CMakeLists.txt  expr.h  inet.c  inet.h  inet_ntop.c  sg_entrypoint.c  sg_entrypoint.h  sg_entrypoints.c  sg_entrypoints.h  sg_expr.c  sg_expr.h  sg_extra.c  sg_extra.h  sg_ffi.c  sg_ffi.h  sg_httpauth.c  sg_httpauth.h  sg_httpreq.c  sg_httpreq.h  sg_httpres.c  sg_httpres.h  sg_httpsrv.c  sg_httpsrv.h  sg_httpuplds.c  sg_httpuplds.h  sg_httputils.c  sg_httputils.h  sg_macros.h  sg_router.c  sg_router.h  sg_routes.c  sg_routes.h  sg_str.c  sg_str.h  sg_strmap.c  sg_strmap.h  sg_utils.c  sg_utils.h
test/: CMakeLists.txt  sg_assert.h  test_entrypoint.c  test_entrypoints.c  test_expr.c  test_extra.c  test_httpauth.c  test_httpreq.c  test_httpres.c  test_httpsrv.c  test_httpsrv_curl.c  test_httpsrv_tls_curl.c  test_httpuplds.c  test_httputils.c  test_router.c  test_routes.c  test_str.c  test_strmap.c  test_utils.c
